Fix horizontal scroll bug in chat. And also edited chat title to show meal type

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,6 +218,8 @@ body {
 .chatArea{
 	height: 390px;
 	overflow: scroll;
+	word-wrap: break-word;
+	padding: 15px;
 }
 
 .emojiButton{
